--- a/homepage.html
+++ b/homepage.html
@@ -780,6 +780,29 @@ nav ul li a:hover {
                 max-width: calc (100 vw -40px);
             }
         }
+
+
+.dashboard{
+    background-color: #ccc;
+    text-align: center;
+    max-width: 500px;
+    margin-top: 3em;
+    padding: 2em;
+}
+
+    
+/* .docs{
+    color: white;
+} */
+
+.space{
+    display: flex;
+    justify-content: center;
+}
+
+
+
+
     </style>
     <script type="module" src="./homepage.js"></script>
 </head>
@@ -826,11 +849,22 @@ nav ul li a:hover {
 
     </section>
 
-    <!-- <section class="dashboard" id="dashboard">
-    <div style="display:flex; justify-content:center; align-items:center; margin-top: 4em;" id="container"> -->
-    <!-- Optional Image Placeholder  -->
-<!-- </div></section> -->
 
+
+
+
+
+
+
+
+<main class="space">
+    <section class="dashboard" id="dashboard">
+        <h2 class="docs">Uploaded Documents</h2>
+    <div  id="container">
+    <!-- Optional Image Placeholder  -->
+    </div>
+    </section>
+</main>
 
 
 
