--- a/admin_homepage_1.html
+++ b/admin_homepage_1.html
@@ -8,27 +8,28 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f0f4f8;
+            background-color: #115740;
             margin: 0;
             padding: 20px;
-            color: #333;
+            color: white;
         }
         .header {
             text-align: center;
             margin-bottom: 20px;
         }
         h1 {
-            color: #4a90e2;
+            color: #fecd2e;
             font-size: 2.5em;
             margin: 0;
         }
         .dropdown {
             position: relative;
+            margin-top: 2em;
             display: inline-block;
         }
         .dropbtn {
-            background-color: #4a90e2; /* Button color */
-            color: white;
+            background-color: white; /* Button color */
+            color: #115740;
             padding: 10px 15px;
             font-size: 16px;
             border: none;
@@ -38,11 +39,13 @@
         .dropdown-content {
             display: none;
             position: absolute;
+            margin-top: 0.2em;
             background-color: #ffffff;
             min-width: 200px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             z-index: 1;
             border-radius: 5px;
+            color: #115740;
         }
         .dropdown:hover .dropdown-content {
             display: block; /* Show dropdown on hover */
@@ -50,7 +53,7 @@
         .dropdown-content h2 {
             margin: 10px;
             font-size: 1.5em;
-            color: #4a90e2; /* Title color */
+            color: #fecd2e; /* Title color */
         }
         .dropdown-content div {
             padding: 10px;
@@ -77,6 +80,7 @@
         }
         h2 {
             text-align: center; 
+            margin: 1em 0em;
         }
         table {
           width: 100%;
@@ -89,11 +93,12 @@
           padding: 12px; 
           text-align:left; 
           border-bottom :1px solid #ddd; 
+          color: #115740;
       }
 
       th {
-          background-color:#4a90e2; 
-          color:white; 
+          background-color:#fecd2e; 
+          color:#115740; 
       }
 
       tr:nth-child(even) {
